--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 paginate:            5
 
 # Build settings
+name:                gainesvillepunkshows
 markdown:            kramdown
 highlighter:         rouge
 permalink:           none
