--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-# Site Build Settings
+s# Site Build Settings
 
 # jekyll-paginate configuration
 paginate:            5
 
 # Build settings
-name:                gainesvillepunkshows
+name:                gainesvillepunkarchives
 markdown:            kramdown
 highlighter:         rouge
 permalink:           none
@@ -15,7 +15,7 @@ sass:
   style: :nested
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "gainesville punk shows"
+title:		           "gainesville punk archives"
 description:	       ""
 author:              ""
 
