--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,10 +6,10 @@ disqus:
 # google-ID: 'UA-112060364-2'
 
 menu:
-- {name: 'Interesting Facts', folder: 'pages', file: 'facts.html'}
-- {name: 'Learning Resources', folder: 'pages', file: 'resources.html'}
-- {name: 'Sample Posts', folder: 'pages', file: 'sample-posts.html'}
-- {name: 'Documentation', folder: 'pages', file: 'documentation.html'}
+- {name: 'Bands', folder: 'pages', file: 'facts.html'}
+- {name: 'Venues', folder: 'pages', file: 'resources.html'}
+- {name: 'Shows', folder: 'pages', file: 'sample-posts.html'}
+- {name: 'Etc', folder: 'pages', file: 'documentation.html'}
 - {name: 'About', folder: 'pages', file: 'about.html'}
 - {name: 'Contact', folder: 'pages', file: 'contact.html'}
 
